# CppStartHere

./: .gitignore  CMakeLists.txt  CompilerOptions.cmake  LICENSE  README.md  Tests.cmake  clean_up.sh  func.h  main.cpp  test_file.cpp
src/: main.cpp
tests/: test_file.cpp
